8225797: OldObjectSample event creates unexpected amount of checkpoint data Reviewed-by: egahlin